--- a/mern-ecommerce-main/server/package.json
+++ b/mern-ecommerce-main/server/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "Ecom backend",
+  "name": "ecom-backend",
   "version": "1.0.0",
   "description": "Server",
-  "proxy": "http://localhost:3000/1 ",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "license": "ISC",
   "dependencies": {
