--- a/mern-ecommerce-main/client/.env
+++ b/mern-ecommerce-main/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://shema-backend.vercel.app/
+REACT_APP_API_URL=https://web-ca1.onrender.com/
 REACT_APP_ECOMM_URL=https://shema-ecommerce.herokuapp.com/
